--- a/.github/workflows/OpenWrt-arm64-test.yml
+++ b/.github/workflows/OpenWrt-arm64-test.yml
@@ -52,9 +52,8 @@ jobs:
           
       - name: Clone Sound Code
         run: |
-          git clone https://github.com/coolsnowwolf/lede
-          mv ./lede/* .
-          rm -rf ./lede
+          git clone https://github.com/coolsnowwolf/lede openwrt
+          cd openwrt
       - name: Update packages
         run: |
           cd package
@@ -64,13 +63,7 @@ jobs:
           git clone https://github.com/tty228/luci-app-serverchan
           git clone https://github.com/vernesong/OpenClash
           git clone https://github.com/rufengsuixing/luci-app-adguardhome
-          #git clone https://github.com/Baozisoftware/luci-app-koolproxy
-          #git clone https://github.com/pymumu/smartdns.git
-          git clone https://github.com/Apocalypsor/luci-app-smartdns.git
-          #git clone https://github.com/kang-mk/luci-app-smartinfo
-          #git clone https://github.com/destan19/OpenAppFilter
-          #git clone https://github.com/jerrykuku/luci-app-vssr
-          #git clone https://github.com/project-openwrt/luci-app-unblockneteasemusic
+          git clone -b lede https://github.com/pymumu/luci-app-smartdns.git
           
           
       - name: FilePath
@@ -80,9 +73,11 @@ jobs:
           
       - name: Update feeds
         run: |
-          sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
+          cd openwrt
+          sed -i 's/\"#src-git\"/\"src-git\"/g' ./feeds.conf.default
           ./scripts/feeds update -a
           ./scripts/feeds install -a
+
       - name: Generate configuration file
         run: |
           rm -f ./.config*
@@ -120,6 +115,9 @@ jobs:
           CONFIG_TARGET_armvirt=y
           CONFIG_TARGET_armvirt_64=y
           CONFIG_TARGET_armvirt_64_Default=y
+          CONFIG_TARGET_ROOTFS_TARGZ=y
+          CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
+          CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
           EOF
           # IPv6支持:
           cat >> .config <<EOF
@@ -138,40 +136,29 @@ jobs:
           CONFIG_PACKAGE_luci-app-firewall=y
           CONFIG_PACKAGE_luci-app-flowoffload=y
           CONFIG_PACKAGE_luci-app-kodexplorer=y
-          #CONFIG_PACKAGE_luci-app-vssr is not set
-          CONFIG_PACKAGE_smartdns=y
           CONFIG_PACKAGE_luci-app-smartdns=y
-          CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
           CONFIG_PACKAGE_luci-app-ssr-plus=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
           CONFIG_PACKAGE_luci-app-serverchan=y
-          CONFIG_PACKAGE_luci-app-v2ray-server=y
           CONFIG_PACKAGE_luci-app-sqm=y
           CONFIG_PACKAGE_luci-app-samba=y
           CONFIG_PACKAGE_luci-app-ttyd=y
           CONFIG_PACKAGE_luci-app-wol=y
           CONFIG_PACKAGE_luci-app-ramfree=y
           CONFIG_PACKAGE_luci-app-frpc=y
-          CONFIG_PACKAGE_luci-app-usb-printer=y
           CONFIG_PACKAGE_luci-app-upnp=y
           CONFIG_PACKAGE_luci-app-vlmcsd=y
-          CONFIG_PACKAGE_luci-app-minidlna=y
           CONFIG_PACKAGE_luci-app-zerotier=y
           CONFIG_PACKAGE_luci-app-qbittorrent=y
           CONFIG_PACKAGE_luci-app-openclash=y
-          #CONFIG_PACKAGE_luci-app-transmission is not set
-          #CONFIG_PACKAGE_luci-app-filebrowser is not set
           CONFIG_PACKAGE_luci-app-adguardhome=y
-          #CONFIG_PACKAGE_luci-app-koolproxy is not set
-          #CONFIG_PACKAGE_luci-app-passwall is not set
-          CONFIG_PACKAGE_luci-ssl-openssl=y
           CONFIG_PACKAGE_luci-app-unblockmusic=y
-          CONFIG_PACKAGE_luci-app-wrtbwmon=y
           EOF
           # LuCI主题:
           # cat >> .config <<EOF
@@ -179,27 +166,10 @@ jobs:
           # EOF
           # 常用软件包:
           cat >> .config <<EOF
-          CONFIG_PACKAGE_curl=y
-          CONFIG_PACKAGE_htop=y
-          CONFIG_PACKAGE_nano=y
-          CONFIG_PACKAGE_screen=y
-          CONFIG_PACKAGE_tree=y
-          CONFIG_PACKAGE_vim-fuller=y
           CONFIG_PACKAGE_wget=y
-          CONFIG_PACKAGE_unzip=y
-          CONFIG_PACKAGE_e2fsprogs=y
-          CONFIG_PACKAGE_cifsmount=y
-          CONFIG_PACKAGE_perl=y
-          CONFIG_PACKAGE_perlbase-utf8=y
-          CONFIG_PACKAGE_blkid=y
-          CONFIG_PACKAGE_losetup=y
           CONFIG_PACKAGE_uuidgen=y
           CONFIG_PACKAGE_tar=y
-          CONFIG_PACKAGE_gawk=y
-          CONFIG_PACKAGE_getopt=y
           CONFIG_PACKAGE_bash=y
-          CONFIG_PACKAGE_fdisk=y
-          CONFIG_PACKAGE_lsblk=y
           EOF
           # 取消编译VMware镜像以及镜像填充 (不要删除被缩进的注释符号):
           # cat >> .config <<EOF
@@ -229,6 +199,7 @@ jobs:
           du -h --max-depth=1 ./ --exclude=build_dir --exclude=bin
           du -h --max-depth=1 ./build_dir
           du -h --max-depth=1 ./bin
+
       - name: Assemble artifact
         run: |
           rm -rf ./artifact/
@@ -245,4 +216,3 @@ jobs:
         with:
           name: OpenWrt-arm64-Rootfs-test
           path: ./artifact/
-
